--- a/index.html
+++ b/index.html
@@ -1,1 +1,122 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Certifications - Kleber Vales</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f9fafb;
+      color: #111827;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+    }
+    header {
+      background: #111827;
+      color: white;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.2rem;
+    }
+    header p {
+      margin: 0.5rem 0 0;
+      font-size: 1.2rem;
+      color: #9ca3af;
+    }
+    section {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+    h2 {
+      margin-top: 2rem;
+      color: #2563eb;
+    }
+    .cert {
+      margin: 1.2rem 0;
+      padding: 1rem;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    .cert img.badge {
+      display: block;
+      margin-bottom: 0.5rem;
+    }
+    .cert p {
+      margin: 0.2rem 0;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem;
+      margin-top: 3rem;
+      background: #111827;
+      color: #9ca3af;
+      font-size: 0.9rem;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Professional Certifications</h1>
+    <p>Kleber Vales - Java & Spring Developer</p>
+  </header>
+
+  <section>
+    <h2>✅ Completed</h2>
+    
+    <div class="cert">
+      <img class="badge" src="https://img.shields.io/badge/Scrum%20Fundamentals%20Certified-009FDA?style=for-the-badge&logo=scrumalliance&logoColor=white" alt="Scrum Fundamentals Certified">
+      <p><strong>Scrum Fundamentals Certified (SFC™)</strong> – ScrumStudy</p>
+      <!-- Add certificate image or PDF link -->
+      <p><a href="#">View Certificate</a></p>
+    </div>
+
+    <div class="cert">
+      <img class="badge" src="https://img.shields.io/badge/Oracle%20Certified%20Associate%20Java%20SE%207-EF3E2D?style=for-the-badge&logo=oracle&logoColor=white" alt="OCAJP7">
+      <p><strong>Oracle Certified Associate, Java SE 7 Programmer (OCAJP7)</strong> – Oracle</p>
+      <p><a href="#">View Certificate</a></p>
+    </div>
+
+    <div class="cert">
+      <img class="badge" src="https://img.shields.io/badge/MTA%20Software%20Development%20Fundamentals-0078D4?style=for-the-badge&logo=microsoft&logoColor=white" alt="MTA">
+      <p><strong>MTA: Software Development Fundamentals</strong> – Microsoft</p>
+      <p><a href="#">View Certificate</a></p>
+    </div>
+  </section>
+
+  <section>
+    <h2>🚀 In Progress / Upcoming</h2>
+
+    <div class="cert">
+      <img class="badge" src="https://img.shields.io/badge/Spring%20Professional%20Certification-6DB33F?style=for-the-badge&logo=spring&logoColor=white" alt="Spring">
+      <p><strong>Spring Professional Certification</strong> – VMware</p>
+    </div>
+
+    <div class="cert">
+      <img class="badge" src="https://img.shields.io/badge/AWS%20Certified%20Developer%20Associate-FF9900?style=for-the-badge&logo=amazonaws&logoColor=white" alt="AWS Developer Associate">
+      <p><strong>AWS Certified Developer – Associate</strong> – Amazon Web Services</p>
+    </div>
+
+    <div class="cert">
+      <img class="badge" src="https://img.shields.io/badge/GitHub%20Foundations-181717?style=for-the-badge&logo=github&logoColor=white" alt="GitHub Foundations">
+      <p><strong>GitHub Foundations</strong> – GitHub</p>
+    </div>
+
+    <div class="cert">
+      <img class="badge" src="https://img.shields.io/badge/Scrum%20Master%20Certified-009FDA?style=for-the-badge&logo=scrumalliance&logoColor=white" alt="Scrum Master">
+      <p><strong>Scrum Master (SMC™)</strong> – ScrumStudy</p>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Kleber Vales - All rights reserved</p>
+  </footer>
+</body>
+</html>
 
